// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnginesGroupForm with error renders correctly 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  direction="column"
>
  <SelectEnginesSettings
    enginesGroup={null}
    handleChange={[Function]}
  />
  <EngineProperties
    enginesGroup={null}
    handleChange={[Function]}
  />
  <PreviewSettings />
  <WithStyles(ForwardRef(Snackbar))
    autoHideDuration={6000}
    onClose={[Function]}
    open={true}
  >
    <WithStyles(ForwardRef(Alert))
      onClose={[Function]}
      severity="error"
    >
      ERROR
    </WithStyles(ForwardRef(Alert))>
  </WithStyles(ForwardRef(Snackbar))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`EnginesGroupForm with success renders correctly 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  direction="column"
>
  <SelectEnginesSettings
    enginesGroup={null}
    handleChange={[Function]}
  />
  <EngineProperties
    enginesGroup={null}
    handleChange={[Function]}
  />
  <PreviewSettings />
  <WithStyles(ForwardRef(Snackbar))
    autoHideDuration={6000}
    onClose={[Function]}
    open={true}
  >
    <WithStyles(ForwardRef(Alert))
      onClose={[Function]}
      severity="success"
    >
      Le groupe de moteurs a bien été enregistré
    </WithStyles(ForwardRef(Alert))>
  </WithStyles(ForwardRef(Snackbar))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`EnginesGroupForm without Snackbar renders correctly 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  direction="column"
>
  <SelectEnginesSettings
    enginesGroup={null}
    handleChange={[Function]}
  />
  <EngineProperties
    enginesGroup={null}
    handleChange={[Function]}
  />
  <PreviewSettings />
</WithStyles(ForwardRef(Grid))>
`;
